--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "url": "https://github.com/Denrox/nestjs-microservices-example.git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@google-cloud/storage": "^7.14.0",
+    "@types/multer": "^1.4.12",
+    "uuid": "^11.0.3"
+  }
 }
