--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@google-cloud/storage": "^7.14.0",
     "@types/multer": "^1.4.12",
+    "prom-client": "^15.1.3",
     "uuid": "^11.0.3"
   }
 }
