--- a/gateway/package.json
+++ b/gateway/package.json
@@ -13,6 +13,7 @@
     "test": "jest --config ./test/jest-e2e.json --detectOpenHandles"
   },
   "dependencies": {
+    "@google-cloud/cloud-sql-connector": "^1.8.0",
     "@nestjs/common": "10.4.4",
     "@nestjs/core": "10.4.4",
     "@nestjs/jwt": "^10.2.0",
@@ -22,7 +23,7 @@
     "@nestjs/swagger": "7.4.2",
     "@nestjs/typeorm": "^10.0.2",
     "class-validator": "^0.14.1",
-    "mysql2": "^3.11.3",
+    "mysql2": "^3.14.1",
     "passport": "^0.7.0",
     "reflect-metadata": "0.2.2",
     "rimraf": "6.0.1",
