--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/cloud-sql-connector": "^1.8.0",
     "@google-cloud/logging-bunyan": "^5.1.0",
     "@google-cloud/storage": "^7.14.0",
     "@types/bunyan": "^1.8.11",
     "@types/multer": "^1.4.12",
     "bunyan": "^1.8.15",
+    "mysql2": "^3.14.1",
     "prom-client": "^15.1.3",
     "uuid": "^11.0.3"
   }
