--- a/task/package.json
+++ b/task/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint \"src/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@google-cloud/cloud-sql-connector": "^1.8.0",
     "@nestjs/common": "10.4.4",
     "@nestjs/core": "10.4.4",
     "@nestjs/jwt": "^10.2.0",
@@ -19,7 +20,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.5",
     "@nestjs/typeorm": "^10.0.2",
-    "mysql2": "^3.11.3",
+    "mysql2": "^3.14.1",
     "passport": "^0.7.0",
     "reflect-metadata": "0.2.2",
     "rimraf": "6.0.1",
