--- a/user/package.json
+++ b/user/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint \"src/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@google-cloud/cloud-sql-connector": "^1.8.0",
     "@nestjs/common": "10.4.4",
     "@nestjs/core": "10.4.4",
     "@nestjs/jwt": "^10.2.0",
@@ -19,7 +20,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
-    "mysql2": "^3.11.3",
+    "mysql2": "^3.14.1",
     "reflect-metadata": "0.2.2",
     "rimraf": "6.0.1",
     "rxjs": "7.8.1",
