--- a/gateway/package.json
+++ b/gateway/package.json
@@ -13,6 +13,8 @@
     "test": "jest --config ./test/jest-e2e.json --detectOpenHandles"
   },
   "dependencies": {
+    "@fastify/compress": "^8.0.1",
+    "@fastify/cors": "^11.0.1",
     "@google-cloud/cloud-sql-connector": "^1.8.0",
     "@nestjs/common": "10.4.4",
     "@nestjs/core": "10.4.4",
@@ -20,9 +22,14 @@
     "@nestjs/microservices": "10.4.4",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.5",
+    "@nestjs/platform-fastify": "^11.1.1",
     "@nestjs/swagger": "7.4.2",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^10.0.2",
     "class-validator": "^0.14.1",
+    "compression": "^1.8.0",
+    "fastify": "^5.3.3",
+    "fastify-compress": "^4.1.0",
     "mysql2": "^3.14.1",
     "passport": "^0.7.0",
     "reflect-metadata": "0.2.2",
@@ -33,6 +40,7 @@
   },
   "devDependencies": {
     "@nestjs/testing": "10.4.4",
+    "@types/compression": "^1.7.5",
     "@types/express": "4.17.21",
     "@types/jest": "29.5.13",
     "@types/node": "18.19.55",
