--- a/gateway/package.json
+++ b/gateway/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
+    "start": "node ./dist/main.js",
     "start:dev": "tsc-watch -p tsconfig.build.json --onSuccess \"node -r dotenv/config dist/main.js dotenv_config_path=../.env\"",
     "start:test": "tsc-watch -p tsconfig.build.json --onSuccess \"node -r dotenv/config dist/main.js dotenv_config_path=../.env.test\"",
     "start:prod": "node dist/main.js",
@@ -16,6 +17,8 @@
     "@fastify/compress": "^8.0.1",
     "@fastify/cors": "^11.0.1",
     "@google-cloud/cloud-sql-connector": "^1.8.0",
+    "@google-cloud/logging-bunyan": "^5.1.0",
+    "@google-cloud/storage": "^7.16.0",
     "@nestjs/common": "10.4.4",
     "@nestjs/core": "10.4.4",
     "@nestjs/jwt": "^10.2.0",
@@ -26,6 +29,7 @@
     "@nestjs/swagger": "7.4.2",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^10.0.2",
+    "bunyan": "^1.8.15",
     "class-validator": "^0.14.1",
     "compression": "^1.8.0",
     "fastify": "^5.3.3",
